--- a/styles/index.css
+++ b/styles/index.css
@@ -24,9 +24,18 @@ nav {
     align-items: center;
     justify-content: center;
     gap: 1rem;
-    padding: 1rem;
+    /* padding: 1rem; */
     background-color: black;
-    font-size: large;
+    font-size: 1.5vw;
+
+    & a {
+        padding: 0.5rem;
+        transition: 500ms;
+    }
+
+    & a:hover {
+        background-color: var(--clr-societies);
+    }
 }
 
 section {
@@ -43,7 +52,7 @@ section {
     text-align: center;
 
     & h2 {
-        letter-spacing: 3vw;
+        letter-spacing: 2.4vw;
     }
 }
 
@@ -104,8 +113,8 @@ a {
 }
 
 h1 {
-    font-size: 10vw;
-    text-shadow: 0vw 0vw 1vw black;
+    font-size: 8vw;
+    text-shadow: 0vw 0vw 0.5vw black;
 }
 
 h2 {
